--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,4 +41,7 @@ workflows:
     jobs:
       - say-hello
       - print-hello
-      - print-world
+      - print-world:
+          requires:
+            - print-hello
+
