--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,6 +34,14 @@ jobs:
           name: "Print world"
           command: "echo world"
 
+  print-name:
+    docker:
+      - image: cimg/base:stable
+    steps:
+      - run: 
+          name: "Print name"
+          command: "echo $my_name"
+
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
