--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,10 +19,8 @@ jobs:
     # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
       - checkout
-      - run:
-          name: "Say hello"
-          command: print_pipeline_id
-  
+      - print_pipeline_id
+      
   print-hello:
     docker:
       - image: cimg/base:stable
