--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,9 +3,9 @@
 version: 2.1
 
 commands:
-  print_pipeline_id:
+  fail:
     steps:
-      - run: echo $CIRCLE_WORKFLOW_ID
+      - run: return 1
 
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
@@ -18,9 +18,11 @@ jobs:
     # Add steps to the job
     # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
-      - checkout
-      - print_pipeline_id
-      
+      - fail
+      - run:
+          command: echo "do do da da"
+          when: on_fail
+
   print-hello:
     docker:
       - image: cimg/base:stable
